// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid /> should display items when loading images from useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Rick and Morty
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="dadadsda"
      key="dadadsda"
      title="Rick and Morty in the space"
      url="https://localhost/algo/img.jpg"
    />
  </div>
</Fragment>
`;

exports[`<GifGrid /> should display the component correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Rick and Morty
  </h3>
  <p>
    Loading ...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
